packages/css-engine/crates/aihu-css-core/tests/snapshots/progressive_snapshot__popover_snapshot.snap
---
source: packages/css-engine/crates/aihu-css-core/tests/progressive_snapshot.rs
assertion_line: 80
expression: "compile_sfc_scoped(&sfc(\"popover:menu\")).unwrap()"
---
@layer aihu.reset, aihu.tokens, aihu.components, aihu.utilities;
*, ::before, ::after { border-style: solid; border-width: 0; }
@supports (selector(:popover-open)) {
  .popover\:menu:popover-open { position: fixed; margin: 0; inset: auto; }
}
/* aihu:progressive-fallback popoverFallback (when not @supports selector(:popover-open)) */
