packages/css-engine/crates/aihu-css-core/tests/snapshots/progressive_snapshot__text_balance_snapshot.snap
---
source: packages/css-engine/crates/aihu-css-core/tests/progressive_snapshot.rs
expression: "compile_sfc_scoped(&sfc(\"text-balance:\"))"
---
:host {
  --color-accent: #c8543a;
  --color-accent-foreground: #faf8f4;
  --color-background: #faf8f4;
  --color-border: #ddd9d2;
  --color-destructive: #a8432b;
  --color-destructive-foreground: #faf8f4;
  --color-foreground: #1a1d24;
  --color-muted: #5a5a55;
  --color-muted-foreground: #8a8880;
  --color-primary: #1a1d24;
  --color-primary-foreground: #faf8f4;
  --color-ring: #c8543a;
  --color-secondary: #5a5a55;
  --color-secondary-foreground: #faf8f4;
  --color-surface: #faf8f4;
  --color-surface-foreground: #1a1d24;
}
.text-balance { text-wrap: balance; }
